chore: configurações de deploy para o GitHub Pages

--- a/src/package.json
+++ b/src/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://severinovieiraneto.github.io/quizelo",
   "name": "test-quiz",
   "private": true,
   "version": "0.0.0",
@@ -10,7 +11,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:report": "vitest run --reporter=html"
+    "test:report": "vitest run --reporter=html",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -30,6 +33,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
